--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -13,6 +13,7 @@
                 "eg2.tslint",
                 "christian-kohler.path-intellisense",
                 "esbenp.prettier-vscode",
+                "github.vscode-pull-request-github",
                 "CoenraadS.bracket-pair-colorizer",
                 "esbenp.prettier-vscode",
                 "whatwedo.twig",
