--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -78,6 +78,8 @@ services:
     image: mailhog/mailhog
     ports:
       - 8025:8025
+    networks:
+      - front
 networks:
   front:
     driver: bridge
