--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build: ./docker/php
     volumes:
-      - ../:/var/www/html:z
+      - ../:/workspace:z
       - ../drush/.drushrc.php:/home/www-data/.drushrc.php:z
     restart: unless-stopped
     networks:
